<resources>
    <string-array name="weibo_list_spinner">
        <item>全部</item>
        <item>互相关注</item>
    </string-array>
    <string-array name="atme_list_spinner">
        <item>全部</item>
        <item>我关注的人</item>
    </string-array>
    <string-array name="comment_list_spinner">
        <item>全部</item>
        <item>我关注的人</item>
        <item>\@我的评论</item>
        <item>发出的评论</item>
    </string-array>
    <string-array name="main_tabs">
        <item>首页</item>
        <item>\@我</item>
        <item>评论</item>
        <item>个人</item>
    </string-array>
    <string-array name="weibo_tabs">
        <item>微博</item>
        <item>评论</item>
        <item>转发</item>
    </string-array>
    <string-array name="themes">
        <item>白色</item>
        <item>黑色</item>
    </string-array>
    <string-array name="avatar_modes">
        <item>自动</item>
        <item>小</item>
        <item>大</item>
    </string-array>
    <string-array name="picture_modes">
        <item>小</item>
        <item>中</item>
        <item>大</item>
    </string-array>
    <string-array name="font_sizes">
        <item>小</item>
        <item>中</item>
        <item>大</item>
    </string-array>
    <string-array name="comment_repost_list_avatar_modes">
        <item>自动</item>
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string-array name="load_weibo_counts">
        <item>自动</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string-array name="notification_intervals">
        <item>三分钟</item>
        <item>十五分钟</item>
        <item>半小时</item>
    </string-array>
    <string-array name="add_picture_dialog_items">
        <item>拍照</item>
        <item>图库</item>
    </string-array>
    <string-array name="span_long_click">
        <item>打开</item>
    </string-array>
    <string-array name="filter_types">
        <item>关键词</item>
        <item>用户</item>
        <item>来源</item>
    </string-array>
    <string-array name="user_long_click">
        <item>关注</item>
        <item>屏蔽</item>
    </string-array>
    <string-array name="user_long_click_followed">
        <item>取消关注</item>
        <item>屏蔽</item>
    </string-array>
    <string name="app_name">U二</string>
    <string name="weibo">微博</string>
    <string name="loading">载入中…</string>
    <string name="avatar">头像</string>
    <string name="weibo_pic">微博配图</string>
    <string name="comment">评论</string>
    <string name="repost">转发</string>
    <string name="replied_to_my_comment">回复我的评论：</string>
    <string name="commented_on_my_weibo">评论我的微博：</string>
    <string name="replied_to_comment_by">回复@%s的评论：</string>
    <string name="commented_on_weibo_by">评论@%s的微博：</string>
    <string name="settings">设置</string>
    <string name="gps">GPS</string>
    <string name="summary">简介</string>
    <string name="address">地址</string>
    <string name="statistics">统计</string>
    <string name="weibo_count">微博数</string>
    <string name="following_count">关注数</string>
    <string name="follower_count">粉丝数</string>
    <string name="retry">重试</string>
    <string name="no_earlier_message">没有更早的消息了</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete">删除</string>
    <string name="favorites">收藏夹</string>
    <string name="favorited_successfully">收藏成功</string>
    <string name="unfavorited_successfully">取消收藏成功</string>
    <string name="favorite_failed_reason">收藏失败：%s</string>
    <string name="unfavorite_failed_reason">取消收藏失败：%s</string>
    <string name="favorite">收藏</string>
    <string name="unfavorite">取消收藏</string>
    <string name="delete_failed_reason">删除失败：%s</string>
    <string name="confirm_delete">确定要删除吗？</string>
    <string name="reply_to_comment">回复评论</string>
    <string name="notifications">通知</string>
    <string name="write_weibo">写微博</string>
    <string name="save_picture">保存图片</string>
    <string name="saved_successfully">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="share">分享</string>
    <string name="copy">复制</string>
    <string name="copied_successfully">复制成功</string>
    <string name="view_weibo">查看微博</string>
    <string name="view_pictures">查看图片</string>
    <string name="followed_successfully">关注成功</string>
    <string name="follow_failed_reason">关注失败：%s</string>
    <string name="unfollowed_successfully">取消关注成功</string>
    <string name="unfollow_failed_reason">取消关注失败：%s</string>
    <string name="view_user">查看用户</string>
    <string name="find_user">查找用户</string>
    <string name="user_name_is">用户名：</string>
    <string name="enter_user_name">输入用户名</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="direct_messages">私信</string>
    <string name="username">用户名</string>
    <string name="user">用户</string>
    <string name="ignored_successfully">你不会再见到这家伙了</string>
    <string name="invalid_url">无效的URL</string>
    <string name="just_now">刚刚</string>
    <string name="min_ago">%d分钟前</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="auth_success">授权成功</string>
    <string name="login">登录</string>
    <string name="username_label">用户名：</string>
    <string name="password_label">密码：</string>
    <string name="hack_login">黑魔法登录？</string>
    <string name="username_empty">请输入用户名</string>
    <string name="password_empty">请输入密码</string>
    <string name="password">密码</string>
    <string name="refresh">刷新</string>
    <string name="current_account">当前帐号</string>
    <string name="accounts">帐号</string>
    <string name="add_account">添加帐号</string>
    <string name="logout">注销</string>
    <string name="new_posts_updated">已更新%d条新信息</string>
    <string name="no_new_posts">没有新信息</string>
    <string name="draft_box">草稿箱</string>
    <string name="open_drawer">打开侧边栏</string>
    <string name="close_drawer">关闭侧边栏</string>
    <string name="lock_orientation">锁定屏幕方向</string>
    <string name="unlock_orientation">解锁屏幕方向</string>
    <string name="refresh_groups">刷新分组</string>
    <string name="quick_comment">快速评论</string>
    <string name="quick_repost">快速转发</string>
    <string name="map">地图</string>
    <string name="general">常规</string>
    <string name="theme">主题</string>
    <string name="data_control">流量控制</string>
    <string name="picture">图片</string>
    <string name="picture_wifi">图片 (Wi-Fi)</string>
    <string name="fast_scroll">快速滚动</string>
    <string name="no_picture_mode">无图模式</string>
    <string name="font_size">字体大小</string>
    <string name="comment_repost_list_avatar">评论/转发列表头像</string>
    <string name="auto">自动</string>
    <string name="load_weibo_count">载入微博数</string>
    <string name="unread_messages">未读消息</string>
    <string name="interval">间隔</string>
    <string name="interval_wifi">间隔 (Wi-Fi)</string>
    <string name="notification_mention_weibo">\@我的微博</string>
    <string name="notification_comment">收到的评论</string>
    <string name="notification_mention_comment">\@我的评论</string>
    <string name="notification_method">提醒方式</string>
    <string name="vibrate">振动</string>
    <string name="notification_led">呼吸灯</string>
    <string name="ringtone">铃声</string>
    <string name="mute">静音</string>
    <string name="wifi_auto_download_pic">自动下载图片 (Wi-Fi)</string>
    <string name="advanced">高级</string>
    <string name="list_hw_accel">列表硬件加速</string>
    <string name="pic_hw_accel">图片硬件加速</string>
    <string name="enabled">启用</string>
    <string name="notification_enabled_after_exit">退出后保留提醒</string>
    <string name="black_magic">黑魔法</string>
    <string name="ignore_unfollowing">屏蔽未关注人微博</string>
    <string name="update_following">更新关注人</string>
    <string name="updating">正在更新…</string>
    <string name="update_finished">更新完成</string>
    <string name="about">关于</string>
    <string name="memory">内存</string>
    <string name="vm_alloc_mem">VM内存占用 : %s</string>
    <string name="native_alloc_mem">Native内存占用 : %s</string>
    <string name="swipe_back">滑动返回</string>
    <string name="official_account">官方帐号</string>
    <string name="developers">开发者</string>
    <string name="directories">路径</string>
    <string name="dir_pic">图片缓存</string>
    <string name="dir_avatar">头像缓存</string>
    <string name="dir_logs">崩溃日志</string>
    <string name="open_source_licenses">开源协议</string>
    <string name="version">版本</string>
    <string name="ignore">屏蔽</string>
    <string name="regex">正则</string>
    <string name="check_reposted">包括被转发的内容</string>
    <string name="keywords">关键词</string>
    <string name="add_filter">添加过滤器</string>
    <string name="user_id">用户ID</string>
    <string name="source">来源</string>
    <string name="send">发送</string>
    <string name="sending">正在发送</string>
    <string name="sent_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="mention">提及</string>
    <string name="insert_emotion">插入表情</string>
    <string name="insert_topic">插入话题</string>
    <string name="add_picture">添加图片</string>
    <string name="no_camera_app">没有相机应用</string>
    <string name="cannot_add_picture">无法添加照片</string>
    <string name="share_picture">分享图片</string>
    <string name="save_draft">保存草稿？</string>
    <string name="search">搜索</string>
    <string name="search_friends">搜索好友</string>
    <string name="write_comment">评论微博</string>
    <string name="repost_weibo">转发微博</string>
    <string name="open_gps">请打开GPS</string>
    <string name="updatind_location">正在获取位置…</string>
    <string name="location_updated">位置获取成功</string>
    <string name="add_location">添加位置</string>
    <string name="comment_when_repost">同时评论微博</string>
    <string name="comment_ori_when_repost">同时评论原微博</string>
    <string name="comment_ori">同时评论原微博</string>
    <string name="emotion">表情</string>
    <string name="too_many_words">字数太多</string>
    <string name="cannot_be_empty">内容不能为空</string>
    <string name="upload_failed">上传失败</string>
    <string name="write_hint">写点什么吧…</string>
    <string name="repost_when_comment">同时转发微博</string>
    <string name="show_ori">显示原图</string>
    <string name="send_dm">发送私信</string>
    <string name="new_comments">%d条评论</string>
    <string name="new_mention_weibos">%d条@微博</string>
    <string name="new_mention_comments">%d条@评论</string>
    <string name="new_dms">%d条私信</string>
    <string name="upload_picture">上传图片</string>
    <string name="waiting_response">等待服务器响应</string>
    <string name="uploading">正在上传</string>
    <string name="posts_of">%s的微博</string>
    <string name="following_of">%s的关注</string>
    <string name="followers_of">%s的粉丝</string>
    <string name="follow">关注</string>
    <string name="unfollow">取消关注</string>
    <string name="followed_each_other">互相关注</string>
    <string name="unknown_error">未知错误</string>
    <string name="network_error">网络错误</string>
    <string name="json_error">JSON解析错误</string>
    <string name="error_code_10001">系统错误</string>
    <string name="error_code_10002">服务端资源不可用</string>
    <string name="error_code_10003">远程服务出错</string>
    <string name="error_code_10005">该资源需要更高级的授权</string>
    <string name="error_code_10006">缺少source参数(appkey)</string>
    <string name="error_code_10007">不支持的MediaType</string>
    <string name="error_code_10008">参数错误</string>
    <string name="error_code_10009">任务过多，系统繁忙</string>
    <string name="error_code_10010">任务超时</string>
    <string name="error_code_10011">RPC错误</string>
    <string name="error_code_10012">非法请求</string>
    <string name="error_code_10013">不合法的微博用户</string>
    <string name="error_code_10014">访问接口权限受限制</string>
    <string name="error_code_10016">缺失参数</string>
    <string name="error_code_10017">参数值非法</string>
    <string name="error_code_10018">请求长度超过限制</string>
    <string name="error_code_10020">接口不存在</string>
    <string name="error_code_10021">请求的HttpMethod不支持</string>
    <string name="error_code_10022">IP请求超过上限</string>
    <string name="error_code_10023">用户请求超过上限</string>
</resources>