<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidweibo="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/comment"
        android:icon="@drawable/ic_comment_dark"
        android:title="@string/comment"
        androidweibo:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/repost"
        android:icon="@drawable/ic_repost_dark"
        android:title="@string/repost"
        androidweibo:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_dark"
        android:title="@string/refresh"
        androidweibo:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorited"
        android:title="@string/favorite"
        androidweibo:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/unfavorite"
        android:icon="@drawable/ic_unfavorited"
        android:title="@string/unfavorite"
        androidweibo:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_dark"
        android:title="@string/share"
        androidweibo:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        androidweibo:showAsAction="ifRoom|withText"/>

</menu>
