<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidweibo="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/reply"
        android:title="@string/reply_to_comment"
        android:icon="@drawable/ic_reply_dark" />
    
    <item
        android:id="@+id/view_weibo"
        android:title="@string/view_weibo"
        android:icon="@drawable/ic_menu_view_weibo" />
    
    <item
        android:id="@+id/view_user"
        android:title="@string/view_user"
        android:icon="@drawable/ic_menu_view_user" />
    
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_dark" />
    
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_menu_share_dark"
        androidweibo:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
    
</menu>
